UseCGroupMemoryLimitForHeap has been removed completely in JDK 11 and replaced with UseContainerSupport.